[tool.poetry]
name = "fortuneteller"
version = "0.1.0"
description = "Tooklit to check investment impact over time"
authors = ["Alexandru <alexandru.but@agile-robots.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
matplotlib = "^3.8.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
